--- a/gateway/conf/locations/users.conf
+++ b/gateway/conf/locations/users.conf
@@ -1,35 +1,35 @@
 # users-api locations
 
-location = /user/me {
-    proxy_pass http://users-api/api/v1/users/me;
-    proxy_redirect off;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+location = /me {
+    proxy_pass http://users-api/api/v1/auth/me;
+    # proxy_redirect off;
+    # proxy_set_header Host $host;
+    # proxy_set_header X-Real-IP $remote_addr;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
-location = /user/signup {
-    proxy_pass http://users-api/api/v1/users/signup;
-    proxy_redirect off;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+location = /signup {
+    proxy_pass http://users-api/api/v1/auth/signup;
+    # proxy_redirect off;
+    # proxy_set_header Host $host;
+    # proxy_set_header X-Real-IP $remote_addr;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
-location = /user/signin {
-    proxy_pass http://users-api/api/v1/users/signin;
-    proxy_redirect off;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+location = /signin {
+    proxy_pass http://users-api/api/v1/auth/signin;
+    # proxy_redirect off;
+    # proxy_set_header Host $host;
+    # proxy_set_header X-Real-IP $remote_addr;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
-location = /user/signout {
-    proxy_pass http://users-api/api/v1/users/signout;
-    proxy_redirect off;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+location = /signout {
+    proxy_pass http://users-api/api/v1/auth/signout;
+    # proxy_redirect off;
+    # proxy_set_header Host $host;
+    # proxy_set_header X-Real-IP $remote_addr;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
 
