--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -9,22 +9,22 @@ env JWT_SECRET;
 http {
     lua_package_path "/usr/local/openresty/lualib/?.lua;;";
 
-    # include    conf/limits/hashes.conf;
-    # include    conf/limits/open_files_cache.conf;
-    # include    conf/limits/timeouts.conf;
+    include    conf/limits/hashes.conf;
+    include    conf/limits/open_files_cache.conf;
+    include    conf/limits/timeouts.conf;
 
-    # include    conf/system/mime_types.conf;
-    # include    conf/system/http.conf;
-    # include    conf/system/security.conf;
+    include    conf/system/mime_types.conf;
+    include    conf/system/http.conf;
+    include    conf/system/security.conf;
 
-    # include    conf/logs/formats.conf;
+    include    conf/logs/formats.conf;
 
     include    conf/enable/error_logs.conf;
     include    conf/enable/access_logs.conf;
 
-    # include    conf/maps/*.conf;
+    include    conf/maps/*.conf;
     include    conf/upstreams/*.conf;
-    # include    conf/zones/*.conf;
+    include    conf/zones/*.conf;
 
     include    servers/*.conf;
 }
