--- a/gateway/servers/main.conf
+++ b/gateway/servers/main.conf
@@ -1,25 +1,23 @@
 # 
 
 server {
-    server_name             default_server;
+    server_name             localhost;
     listen                  80;
-    # listen                  443 ssl http2;
-    # root                    /usr/local/openresty/nginx/html;
-
-    # rewrite                 /pretty/url/ /controller/action/parameter1/parameter2/;
 
     lua_code_cache          off;
     lua_need_request_body   on;
 
     # include                 conf/enable/ssl.conf;
-    # include                 conf/enable/uploads.conf;
-    # include                 conf/enable/gzip.conf;
+    include                 conf/enable/uploads.conf;
+    include                 conf/enable/gzip.conf;
 
-    # include                 conf/limits/methods.conf;
+    include                 conf/limits/methods.conf;
     include                 conf/limits/rates.conf;
 
-    # include                 conf/locations/system.conf;
+    include                 conf/locations/system.conf;
     include                 conf/locations/static.conf;
+
+    include                 conf/locations/client.conf;
     include                 conf/locations/users.conf;
     include                 conf/locations/posts.conf;
     
