--- a/gateway/conf/locations/nginx_status.conf
+++ b/gateway/conf/locations/nginx_status.conf
@@ -1,6 +1,6 @@
 # Check nginx stats
 
-location /nginx_status {
+location = /nginx_status {
     stub_status on;
     include     conf/limits/access.conf;
 }
