--- a/gateway/nginx/server/main.conf
+++ b/gateway/nginx/server/main.conf
@@ -7,17 +7,16 @@ server {
     lua_need_request_body on;
 
     # include ../conf/system_ssl.conf;
-    include ../conf/system_uploads.conf;
-    include ../conf/system_gzip.conf;
+    include conf/system_uploads.conf;
+    include conf/system_gzip.conf;
 
-    include ../conf/limit_methods.conf;
-    include ../conf/limit_rates.conf;
+    include conf/limit_methods.conf;
+    include conf/limit_rates.conf;
 
-    include ../location/system.conf;
-    include ../location/static.conf;
+    include location/system.conf;
+    include location/static.conf;
 
-    include ../location/client.conf;
-    include ../location/users.conf;
-    include ../location/posts.conf;
-    include ../location/status.conf;
+    include location/users.conf;
+    include location/posts.conf;
+    include location/status.conf;
 }
