--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -2,14 +2,12 @@
 
 include conf/system_processes.conf;
 
-events { 
-    include conf/system_connections.conf; 
-}
+events {include conf/system_connections.conf;}
 
 env JWT_SECRET;
 
 http {
-    lua_package_path "/usr/local/openresty/lualib/?.lua;;";
+    include lua/path.conf;
     
     include conf/limit_hashes.conf;
     include conf/limit_open_files_cache.conf;
