--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -7,7 +7,7 @@ events {include conf/system_connections.conf;}
 env JWT_SECRET;
 
 http {
-    include lua/path.conf;
+    include lua/package_path.conf;
     
     include conf/limit_hashes.conf;
     include conf/limit_open_files_cache.conf;
