--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -25,5 +25,8 @@ http {
     include conf/zone_*.conf;
 
     include upstream/*.conf;
+    
+    init_by_lua_file lua/set_tables.lua
+
     include server/*.conf;
 }
