--- a/gateway/nginx/conf/log_access_logs.conf
+++ b/gateway/nginx/conf/log_access_logs.conf
@@ -1,3 +1,5 @@
 
-access_log /var/log/nginx/bots.access.log main_anon if=$is_bot;
-access_log /var/log/nginx/access.log main_anon if=$is_human;
+access_log /var/log/nginx/access.log main;
+
+# access_log /var/log/nginx/bots.access.log main_anon if=$is_bot;
+# access_log /var/log/nginx/access.log main_anon if=$is_human;
