--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,16 @@ services:
     container_name: voucher
     ports:
       - 9090:9090
+    environment: 
+      - VOUCH_DOMAINS=seesee.space
+      - OAUTH_PROVIDER=oidc
+      - OAUTH_CLIENT_ID=17a5v1sogv6t019643rid5q5mi
+      - OAUTH_CLIENT_SECRET=1ou1ekob5rv5msbg2e858dd3mpt0qpdlfgi1mk6qamk5dsoatvug
+      - OAUTH_AUTH_URL=https://seesee.auth.us-east-1.amazoncognito.com/oauth2/authorize
+      - OAUTH_TOKEN_URL=https://seesee.auth.us-east-1.amazoncognito.com/oauth2/token
+      - OAUTH_USER_INFO_URL=https://seesee.auth.us-east-1.amazoncognito.com/oauth2/userInfo
+      - OAUTH_SCOPES='openid,email,profile'
+      - OAUTH_CALLBACK_URL=http://vouch.seesee.space:9090/auth
     volumes:
       - ./voucher/config:/config
     networks:
