--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -24,9 +24,8 @@ http {
     include conf/map_*.conf;
     include conf/zone_*.conf;
 
-    include upstream/*.conf;
-    
     init_by_lua_file lua/set_tables.lua
-
-    include server/*.conf;
+    
+    include upstream/*.conf;
+    include server/seesee.space.conf;
 }
