--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
 
     include upstream/*.conf;
 
-    init_by_lua_file lua/set_tables.lua
+    init_by_lua_file lua/set_tables.lua;
     
     include server/seesee.space.conf;
 }
