--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -28,5 +28,6 @@ http {
 
     init_by_lua_file lua/set_tables.lua;
     
+    include server/vouch.seesee.space.conf;
     include server/seesee.space.conf;
 }
