--- a/gateway/nginx/server/vouch.seesee.space.conf
+++ b/gateway/nginx/server/vouch.seesee.space.conf
@@ -4,8 +4,8 @@ server {
     listen 443 ssl http2;
     server_name vouch.seesee.space;
 
-    ssl_certificate /etc/letsencrypt/live/vouch.seesee.space/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/vouch.seesee.space/privkey.pem;
+    ssl_certificate /etc/ssl/voucher.seesee.space/fullchain.pem;
+    ssl_certificate_key /etc/ssl/voucher.seesee.space/privkey.pem;
 
     location / {
        proxy_pass http://127.0.0.1:9090;
