--- a/voucher/app1.seesee.space.conf
+++ b/voucher/app1.seesee.space.conf
@@ -1,5 +1,6 @@
 
 server {
+    listen 80;
     listen 443 ssl http2;
     server_name app1.seesee.space;
     root /var/www/html/;
@@ -48,7 +49,8 @@ server {
 
     # proxy pass authorized requests to your service
     location / {
-      proxy_pass http://app1-private.seesee.space:8080;
+      proxy_pass http://users-api:3100;
+      # proxy_pass http://app1-private.seesee.space:8080;
       #  may need to set
       #    auth_request_set $auth_resp_x_vouch_user $upstream_http_x_vouch_user
       #    auth_request_set $auth_resp_x_vouch_idp_claims_groups $upstream_http_x_vouch_idp_claims_groups;
