--- a/gateway/nginx/server/seesee.space.conf
+++ b/gateway/nginx/server/seesee.space.conf
@@ -4,7 +4,7 @@ server {
     server_name seesee.space;
     
     ssl_certificate /etc/ssl/seesee.space/fullchain.pem;
-    ssl_certificate_key /etc/ssl/seesee.space/privkey.pem
+    ssl_certificate_key /etc/ssl/seesee.space/privkey.pem;
     
     lua_code_cache off;
     lua_need_request_body on;
@@ -15,7 +15,6 @@ server {
     include conf/limit_methods.conf;
     include conf/limit_rates.conf;
         
-
     # send all requests to the `/validate` endpoint for authorization
     auth_request /validate;
 
@@ -35,11 +34,12 @@ server {
       auth_request_set $auth_resp_x_vouch_user $upstream_http_x_vouch_user;
 
       # optionally add X-Vouch-IdP-Claims-* custom claims you are tracking
-      #    auth_request_set $auth_resp_x_vouch_idp_claims_groups $upstream_http_x_vouch_idp_claims_groups;
-      #    auth_request_set $auth_resp_x_vouch_idp_claims_given_name $upstream_http_x_vouch_idp_claims_given_name;
+      # auth_request_set $auth_resp_x_vouch_idp_claims_groups $upstream_http_x_vouch_idp_claims_groups;
+      # auth_request_set $auth_resp_x_vouch_idp_claims_given_name $upstream_http_x_vouch_idp_claims_given_name;
+      
       # optinally add X-Vouch-IdP-AccessToken or X-Vouch-IdP-IdToken
-        #  auth_request_set $auth_resp_x_vouch_idp_accesstoken $upstream_http_x_vouch_idp_accesstoken;
-      #    auth_request_set $auth_resp_x_vouch_idp_idtoken $upstream_http_x_vouch_idp_idtoken;
+      # auth_request_set $auth_resp_x_vouch_idp_accesstoken $upstream_http_x_vouch_idp_accesstoken;
+      # auth_request_set $auth_resp_x_vouch_idp_idtoken $upstream_http_x_vouch_idp_idtoken;
 
       # these return values are used by the @error401 call
       auth_request_set $auth_resp_jwt $upstream_http_x_vouch_jwt;
@@ -55,29 +55,27 @@ server {
         return 302 https://vouch.seesee.space/login?url=$scheme://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err;
     }
 
-    include location/system.conf;
-    include location/static.conf;
-    include location/users.conf;
-    include location/posts.conf;    
-
     # proxy pass authorized requests to your service
-    location / {
+    location /auth {
         proxy_pass http://users-api:3100;
         # proxy_pass http://app1-private.seesee.space:8080;
-        #  may need to set
-        #    auth_request_set $auth_resp_x_vouch_user $upstream_http_x_vouch_user
-        #    auth_request_set $auth_resp_x_vouch_idp_claims_groups $upstream_http_x_vouch_idp_claims_groups;
-        #    auth_request_set $auth_resp_x_vouch_idp_claims_given_name $upstream_http_x_vouch_idp_claims_given_name;
-        #
+        
+        # may need to set
+        # auth_request_set $auth_resp_x_vouch_user $upstream_http_x_vouch_user
+        # auth_request_set $auth_resp_x_vouch_idp_claims_groups $upstream_http_x_vouch_idp_claims_groups;
+        # auth_request_set $auth_resp_x_vouch_idp_claims_given_name $upstream_http_x_vouch_idp_claims_given_name;
+  
         # set user header (usually an email)
         proxy_set_header X-Vouch-User $auth_resp_x_vouch_user;
+        
         # optionally pass any custom claims you are tracking
-        #     proxy_set_header X-Vouch-IdP-Claims-Groups $auth_resp_x_vouch_idp_claims_groups;
-        #     proxy_set_header X-Vouch-IdP-Claims-Given_Name $auth_resp_x_vouch_idp_claims_given_name;
+        # proxy_set_header X-Vouch-IdP-Claims-Groups $auth_resp_x_vouch_idp_claims_groups;
+        # proxy_set_header X-Vouch-IdP-Claims-Given_Name $auth_resp_x_vouch_idp_claims_given_name;
+        
         # optionally pass the accesstoken or idtoken
-        #     proxy_set_header X-Vouch-IdP-AccessToken $auth_resp_x_vouch_idp_accesstoken;
-        #     proxy_set_header X-Vouch-IdP-IdToken $auth_resp_x_vouch_idp_idtoken;
-        #
+        # proxy_set_header X-Vouch-IdP-AccessToken $auth_resp_x_vouch_idp_accesstoken;
+        # proxy_set_header X-Vouch-IdP-IdToken $auth_resp_x_vouch_idp_idtoken;
+  
         # Authenticate the application by user
         access_by_lua_file  lua/user_auth.lua;
     }
@@ -85,4 +83,5 @@ server {
     location = /status {
         include location/status.conf;
     }
+  
 }
