--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -24,10 +24,9 @@ http {
     include conf/map_*.conf;
     include conf/zone_*.conf;
 
-    include upstream/*.conf;
+    # include upstream/*.conf;
 
     init_by_lua_file lua/set_tables.lua;
     
     include server/seesee.space.conf;
-    include server/vouch.seesee.space.conf;
 }
