--- a/gateway/nginx/server/seesee.conf
+++ b/gateway/nginx/server/seesee.conf
@@ -3,8 +3,8 @@ server {
     listen 443 ssl http2;
     server_name seesee.space;
     
-    ssl_certificate /etc/ssl/seesee.space/fullchain.pem;
-    ssl_certificate_key /etc/ssl/seesee.space/privkey.pem;
+    ssl_certificate /etc/ssl/seesee.space/certificate.crt;
+    ssl_certificate_key /etc/ssl/seesee.space/private.key;
     
     lua_code_cache off;
     lua_need_request_body on;
@@ -14,7 +14,8 @@ server {
 
     include conf/limit_methods.conf;
     include conf/limit_rates.conf;
-        
+    include location/status.conf;
+
     # send all requests to the `/validate` endpoint for authorization
     auth_request /validate;
 
@@ -79,9 +80,4 @@ server {
         # Authenticate the application by user
         access_by_lua_file  lua/user_auth.lua;
     }
-
-    location = /status {
-        include location/status.conf;
-    }
-  
 }
