--- a/gateway/nginx/locations/users.conf
+++ b/gateway/nginx/locations/users.conf
@@ -1,10 +1,14 @@
 
+# location /api/auth {
+#     proxy_set_header X-Real-IP $remote_addr;
+#     # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+# }
+
 location = /me {    
     proxy_pass http://users/api/v1/auth/me;
     # proxy_redirect off;
     # proxy_set_header Host $host;
-    # proxy_set_header X-Real-IP $remote_addr;
-    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 }
 
 location = /signup {
