--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -1,32 +1,32 @@
 # user nginx;
 
-include conf/system_processes.conf;
+include configs/system_processes.conf;
 
-events {include conf/system_connections.conf;}
+events {include configs/system_connections.conf;}
 
 env JWT_SECRET;
 
 http {
-    include conf/lua_package_path.conf;
 
-    include conf/limit_hashes.conf;
-    include conf/limit_open_files_cache.conf;
-    include conf/limit_timeouts.conf;
-    
-    include conf/system_mime_types.conf;
-    include conf/system_http.conf;
-    include conf/system_security.conf;
-    
-    include conf/log_formats.conf;
-    include conf/log_access_logs.conf;
-    include conf/log_error_logs.conf;
-    
-    include conf/map_*.conf;
-    include conf/zone_*.conf;
+  include configs/lua_path.conf;
 
-    # include upstream/*.conf;
+  include configs/log_formats.conf;
+  include configs/log_error_logs.conf;
+  include configs/log_access_logs.conf;
 
-    init_by_lua_file lua/set_tables.lua;
+  include configs/system_http.conf;
+  include configs/system_security.conf;
+  include configs/system_mime_types.conf;
+
+  include configs/map_*.conf;
+  include configs/zone_*.conf;
+
+  include configs/limit_hashes.conf;
+  include configs/limit_timeouts.conf;
+  include configs/limit_open_files_cache.conf;
+
+  # include upstreams/*.conf;
     
-    include server/seesee.space.conf;
+  include servers/*.conf;
+
 }
