--- a/gateway/nginx/configs/system_ssl.conf
+++ b/gateway/nginx/configs/system_ssl.conf
@@ -13,5 +13,8 @@ ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH"; # Maximum secure 
 
 add_header Strict-Transport-Security 'max-age=63072000; includeSubDomains; preload' always;
 
-ssl_certificate /etc/ssl/certificate.crt;
-ssl_certificate_key /etc/ssl/private.key;
+ssl_certificate /etc/ssl/certs/seesee.crt;
+ssl_certificate_key /etc/certs/seesee.key;
+    
+# ssl_certificate /etc/letsencrypt/live/your.server.url/fullchain.pem;
+# ssl_certificate_key /etc/letsencrypt/live/your.server.url/privkey.pem;
