--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -25,8 +25,8 @@ http {
   include configs/limit_timeouts.conf;
   include configs/limit_open_files_cache.conf;
 
-  # include upstreams/*.conf;
+  # include upstream/*.conf;
     
-  include servers/*.conf;
+  include server/*.conf;
 
 }
