--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -3,15 +3,16 @@ FROM openresty/openresty:alpine-fat
 RUN apk add --no-cache git
 
 RUN rm -rf /etc/nginx/* && mkdir -p /var/log/nginx
-  
-COPY certs/* /etc/ssl/certs
 
-COPY nginx /etc/nginx
-COPY lua /usr/local/openresty/nginx/lua
+# COPY certs/* /etc/ssl/certs
+
+# COPY nginx /etc/nginx
+# COPY lua /usr/local/openresty/nginx/lua
 
 RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-jwt
 RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-cookie
 
-RUN ln -sf /dev/stdout /var/log/nginx/bots.access.log
+RUN ln -sf /dev/stdout /var/log/nginx/access.log
+RUN ln -sf /dev/stdout /var/log/nginx/error.log
 
 ENTRYPOINT ["/usr/local/openresty/bin/openresty", "-g", "daemon off;", "-c", "/etc/nginx/nginx.conf"]09
