--- a/gateway/nginx/configs/lua_path.conf
+++ b/gateway/nginx/configs/lua_path.conf
@@ -3,4 +3,7 @@
 # should return lua home, and the path /etc/nginx ???
 lua_package_path ";;$prefix/?.lua;";
 
+# should return the path /etc/nginx/lua ???
+# lua_package_path "$prefix/lua/?.lua";
+
 # lua_package_path "/usr/local/openresty/lualib/?.lua;;";
