--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -2,11 +2,15 @@ FROM openresty/openresty:alpine-fat
 
 RUN apk add --no-cache git
 
-RUN rm -rf /etc/nginx/* && mkdir -p /var/log/nginx
+RUN rm -rf /etc/nginx/* && \
+  mkdir -p /etc/nginx/sites-available && \
+  mkdir -p /etc/nginx/sites-enabled && \
+  mkdir -p /var/log/nginx
 
 # COPY certs/* /etc/ssl/certs
 
 # COPY nginx /etc/nginx
+COPY lua /etc/nginx/lua
 # COPY lua /usr/local/openresty/nginx/lua
 
 RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-jwt
