--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -1,29 +1,29 @@
 # user nginx;
 
-include configs/system_processes.conf;
+include config/system_processes.conf;
 
-events {include configs/system_connections.conf;}
+events {include config/system_connections.conf;}
 
 env JWT_SECRET;
 
 http {
 
-  include configs/lua_path.conf;
+  include config/lua_path.conf;
 
-  include configs/log_formats.conf;
-  include configs/log_error_logs.conf;
-  include configs/log_access_logs.conf;
+  include config/log_formats.conf;
+  include config/log_error_logs.conf;
+  include config/log_access_logs.conf;
 
-  include configs/system_http.conf;
-  include configs/system_security.conf;
-  include configs/system_mime_types.conf;
+  include config/system_http.conf;
+  include config/system_security.conf;
+  include config/system_mime_types.conf;
 
-  include configs/map_*.conf;
-  include configs/zone_*.conf;
+  include config/map_*.conf;
+  include config/zone_*.conf;
 
-  include configs/limit_hashes.conf;
-  include configs/limit_timeouts.conf;
-  include configs/limit_open_files_cache.conf;
+  include config/limit_hashes.conf;
+  include config/limit_timeouts.conf;
+  include config/limit_open_files_cache.conf;
 
   # include upstream/*.conf;
     
