--- a/gateway/nginx/server/seesee.conf
+++ b/gateway/nginx/server/seesee.conf
@@ -9,15 +9,15 @@ server {
     # listen 443 ssl http2;
     # server_name seesee.space www.seesee.space;
 
-    # include configs/system_ssl.conf;
+    # include config/system_ssl.conf;
 
-    # include configs/lua_defaults.conf;
+    include config/lua_defaults.conf;
     
-    include configs/system_gzip.conf;
-    include configs/system_uploads.conf;
+    include config/system_gzip.conf;
+    include config/system_uploads.conf;
 
-    include configs/limit_rates.conf;
-    include configs/limit_methods.conf;
+    include config/limit_rates.conf;
+    include config/limit_methods.conf;
 
     include location/*.conf;
 
