--- a/gateway/nginx/upstream/posts.conf
+++ b/gateway/nginx/upstream/posts.conf
@@ -1,5 +1,7 @@
 
+# proxies reqs made to the posts-api container
+
 upstream posts {
-    server posts-api:3200;
-    keepalive 20;
+  server posts-api:3200;
+  keepalive 20;
 }
