--- a/gateway/nginx/upstream/users.conf
+++ b/gateway/nginx/upstream/users.conf
@@ -1,5 +1,7 @@
 
+# proxies reqs made to the auth-api container
+
 upstream users {
-    server users-api:3100;
-    keepalive 20;
+  server users-api:3100;
+  keepalive 20;
 }
