--- a/gateway/nginx/config/lua_path.conf
+++ b/gateway/nginx/config/lua_path.conf
@@ -1,6 +1,6 @@
 # path to lua files
 
 # should return the path /etc/nginx/lualib ???
-lua_package_path ";;$prefix/lualib/?.lua;";
+lua_package_path ";;$prefix/lua/?.lua;";
 
 # lua_package_path "/usr/local/openresty/lualib/?.lua;;";
