--- a/gateway/nginx/config/limit_hashes.conf
+++ b/gateway/nginx/config/limit_hashes.conf
@@ -4,7 +4,7 @@
 variables_hash_max_size         1024;
 #variables_hash_bucket_size      64;
 
-map_hash_max_size               2048;
+# map_hash_max_size               2048;
 #map_hash_bucket_size            64;
 
 server_names_hash_max_size      1024;
