--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -25,8 +25,7 @@ http {
   include config/limit_timeouts.conf;
   include config/limit_open_files_cache.conf;
 
-  # include upstream/*.conf;
-    
+  include upstream/*.conf;
   include server/*.conf;
 
 }
