--- a/gateway/nginx/server/seesee.conf
+++ b/gateway/nginx/server/seesee.conf
@@ -4,12 +4,14 @@ server {
     
     listen 80;
     listen [::]:80;
-    server_name localhost www.localhost;;
+    # listen 443 ssl http2;
+    # listen [::]:443 ssl http2;
+    server_name localhost www.localhost;
 
     # listen 443 ssl http2;
     # server_name seesee.space www.seesee.space;
 
-    # include config/system_ssl.conf;
+    include config/system_ssl.conf;
 
     include config/lua_defaults.conf;
     
@@ -22,3 +24,15 @@ server {
     include location/*.conf;
 
 }
+
+# server {
+  
+#   listen 80;
+#   listen [::]:80;
+#   server_name localhost www.localhost;
+  
+#   location / {
+#     rewrite ^ https://$host$request_uri? permanent;
+#   }
+
+# }
