--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -5,6 +5,9 @@ RUN apk add --no-cache git
 RUN rm -rf /etc/nginx/* && mkdir -p /var/log/nginx
 
 COPY nginx/* /etc/nginx/
+COPY certs/* /etc/ssl/certs/
+COPY lua/* /usr/local/openresty/nginx/lua/
+COPY favicon.ico /usr/local/openresty/nginx/html
 
 RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-jwt
 RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-cookie
