--- a/gateway/nginx/location/lets.conf
+++ b/gateway/nginx/location/lets.conf
@@ -1,6 +1,6 @@
-# Allow domains to be validated by ACME protocol (letsencrypt)
+# # Allow domains to be validated by ACME protocol (letsencrypt)
 
-location ^~ /.well-known/acme-challenge/ {
-  allow all;
-  # root /data/letsencrypt;
-}
+# location ^~ /.well-known/acme-challenge/ {
+#   allow all;
+#   # root /data/letsencrypt;
+# }
