--- a/gateway/nginx/location/system.conf
+++ b/gateway/nginx/location/system.conf
@@ -1,4 +1,26 @@
+# 
 
 location ~ (?:/\..*|~)$ {
-    deny all;
+  deny all;
+}
+
+error_page 404 /404.html;
+error_page 500 501 502 503 504 /50x.html;
+
+location ~ [4-5][0-9][0-9].html {
+  internal;
+}
+
+location = /favicon.ico {
+  log_not_found off;
+  access_log off;
+}
+
+location ^~ /.well-known/acme-challenge/ {
+  allow all;
+}
+
+location = /status {
+  stub_status on;
+  include config/limit_access.conf;
 }
