--- a/gateway/nginx/location/errors.conf
+++ b/gateway/nginx/location/errors.conf
@@ -1,14 +1,14 @@
 
-fastcgi_intercept_errors on;
+# fastcgi_intercept_errors on;
 
-error_page 404 /404.html;
-error_page 500 501 502 503 504 /50x.html;
+# error_page 404 /404.html;
+# error_page 500 501 502 503 504 /50x.html;
 
-location ~ [4-5][0-9][0-9].html {
-  internal;
-}
+# location ~ [4-5][0-9][0-9].html {
+#   internal;
+# }
 
-location = /favicon.ico {
-  log_not_found off;
-  access_log off;
-}
+# location = /favicon.ico {
+#   log_not_found off;
+#   access_log off;
+# }
