--- a/gateway/nginx/location/status.conf
+++ b/gateway/nginx/location/status.conf
@@ -1,5 +1,5 @@
 
-location = /status {
-    stub_status on;
-    include config/limit_access.conf;
-}
+# location = /status {
+#     stub_status on;
+#     include config/limit_access.conf;
+# }
