--- a/gateway/nginx/server/seesee.conf
+++ b/gateway/nginx/server/seesee.conf
@@ -1,38 +1,33 @@
 # 
- 
+
 server {
-    
-    listen 80;
-    listen [::]:80;
-    # listen 443 ssl http2;
-    # listen [::]:443 ssl http2;
-    server_name localhost www.localhost;
 
-    # listen 443 ssl http2;
-    # server_name seesee.space www.seesee.space;
+  listen 80;
+  listen [::]:80;
+  server_name localhost www.localhost;
 
-    include config/system_ssl.conf;
+  # listen 443 ssl http2;
+  # listen [::]:443 ssl http2;
+  # server_name seesee.space www.seesee.space;
 
-    include config/lua_defaults.conf;
-    
-    include config/system_gzip.conf;
-    include config/system_uploads.conf;
+  include config/lua_defaults.conf;
 
-    include config/limit_rates.conf;
-    include config/limit_methods.conf;
+  include config/system_ssl.conf;
+  include config/system_gzip.conf;
+  include config/system_uploads.conf;
 
-    include location/*.conf;
+  include config/limit_rates.conf;
+  include config/limit_methods.conf;
+
+  include location/*.conf;
 
 }
 
 # server {
-  
+#  
 #   listen 80;
 #   listen [::]:80;
-#   server_name localhost www.localhost;
-  
-#   location / {
-#     rewrite ^ https://$host$request_uri? permanent;
-#   }
-
+#   server_name seesee.space www.seesee.space;
+#   return 301 https://$host$request_uri;
+#
 # }
