--- a/gateway/nginx/location/system.conf
+++ b/gateway/nginx/location/system.conf
@@ -4,6 +4,53 @@ location ~ (?:/\..*|~)$ {
   deny all;
 }
 
+# ignore favicon logs
+location = /favicon.ico {
+  log_not_found off;
+  access_log off;
+}
+
+# static files
+location ~* \.(?:manifest|appcache|html?|xml|json)$ {
+  expires -1;
+}
+
+location ~* \.(?:rss|atom)$ {
+  expires 1h;
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+  add_header Cache-Control "public";
+}
+
+# static files
+location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webp|webm|htc)$ {
+  expires 1M;
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+  add_header Cache-Control "public";
+}
+
+# static files
+location ~* \.(?:css|js|txt)$ {
+  expires 1y;
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+  add_header Cache-Control "public";
+}
+
+# static files
+location ~* \.(?:ttf|ttc|otf|eot|woff|woff2)$ {
+  expires 1M;
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+  add_header Cache-Control "public";
+}
+
+# errors
 error_page 404 /404.html;
 error_page 500 501 502 503 504 /50x.html;
 
@@ -11,15 +58,12 @@ location ~ [4-5][0-9][0-9].html {
   internal;
 }
 
-location = /favicon.ico {
-  log_not_found off;
-  access_log off;
-}
-
+# 
 location ^~ /.well-known/acme-challenge/ {
   allow all;
 }
 
+# 
 location = /status {
   stub_status on;
   include config/limit_access.conf;
