--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -26,6 +26,6 @@ http {
   include config/limit_open_files_cache.conf;
 
   include upstream/*.conf;
-  include server/*.conf;
+  include server/seesee.conf;
 
 }
