--- a/gateway/nginx/server/seesee.conf
+++ b/gateway/nginx/server/seesee.conf
@@ -4,11 +4,11 @@ server {
 
   listen 80;
   listen [::]:80;
-  server_name localhost www.localhost;
+  server_name localhost www.localhost dev.localhost;
 
   # listen 443 ssl http2;
   # listen [::]:443 ssl http2;
-  # server_name seesee.space www.seesee.space;
+  # server_name seesee.space www.seesee.space dev.seesee.space;
 
   include config/lua_defaults.conf;
 
@@ -27,7 +27,7 @@ server {
 #  
 #   listen 80;
 #   listen [::]:80;
-#   server_name seesee.space www.seesee.space;
+#   server_name seesee.space www.seesee.space dev.seesee.space;
 #   return 301 https://$host$request_uri;
 #
 # }
