--- a/web-pwa/package.json
+++ b/web-pwa/package.json
@@ -4,7 +4,8 @@
   "description": "web-pwa",
   "private": true,
   "scripts": {
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "rm -rf build && GENERATE_SOURCEMAP=false react-scripts build && cp -r build ../gateway",
+    "build2": "GENERATE_SOURCEMAP=false react-scripts build && cp -r build ../gateway",
     "start": "react-scripts start",
     "prod": "yarn build && yarn serve",
     "serve": "node hoster/server.js",
@@ -13,13 +14,13 @@
     "deploy": "GENERATE_SOURCEMAP=false react-scripts build && aws s3 rm s3://seesee.space/ --recursive && aws s3 cp ./build s3://seesee.space/ --recursive --acl public-read"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.1",
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.3.0",
+    "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
-    "dayjs": "^1.9.6",
+    "dayjs": "^1.9.7",
     "is-mobile": "^2.2.2",
     "jwt-decode": "^3.1.2",
     "notistack": "^1.0.2",
@@ -36,7 +37,7 @@
   },
   "devDependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.6"
   },
   "author": "Dany Dodson",
   "license": "ISC",
