--- a/pwa/public/manifest.json
+++ b/pwa/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SeeSee PWA",
-  "name": "SeeSee PWA",
+  "short_name": "React PWA",
+  "name": "React PWA",
   "icons": [
     {
       "src": "favicon.ico",
