--- a/users/package.json
+++ b/users/package.json
@@ -4,8 +4,8 @@
   "description": "users",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV=development nodemon app",
-    "prod": "NODE_ENV=production nodemon app"
+    "start": "NODE_ENV=development ./node_modules/.bin/nodemon app",
+    "prod": "NODE_ENV=production ./node_modules/.bin/nodemon app"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
@@ -15,6 +15,6 @@
     "cors": "^2.8.5",
     "nodemon": "^2.0.6"
   },
-  "author": "Dany Dodson",
-  "license": "ISC"
+  "license": "ISC",
+  "author": "Dany Dodson"
 }
