--- a/proxy/nginx/conf/logs_anon.conf
+++ b/proxy/nginx/conf/logs_anon.conf
@@ -8,10 +8,10 @@
 #                 '$status $body_bytes_sent "$http_referer" '
 #                 '"$http_user_agent" "$http_x_forwarded_for"';
 
-log_format main '$remote_addr $remote_user "$request" $status $body_bytes_sent "$http_referer"';
+# log_format main '$remote_addr $remote_user "$request" $status $body_bytes_sent "$http_referer"';
 
-log_subrequest on;
+# log_subrequest on;
 
-access_log /var/log/nginx/access.log main;
+# access_log /var/log/nginx/access.log main;
 
-error_log /var/log/nginx/error.log error;
+# error_log /var/log/nginx/error.log error;
