--- a/proxy/nginx/locations/status.conf
+++ b/proxy/nginx/locations/status.conf
@@ -1,6 +1,5 @@
 
-location ~ (?:/\..*|~)$
-{
-    include boilerplate/disable/access_logs.conf;
-    deny    all;
+location /status {
+    stub_status on;
+    include conf/log_access.conf;
 }
