--- a/proxy/nginx/nginx.conf
+++ b/proxy/nginx/nginx.conf
@@ -14,11 +14,16 @@ http {
     include conf/mime_types.conf;
     include conf/http.conf;
     include conf/security.conf;
-    include conf/logs.conf;   
-    include conf/temp_path.conf;
-    include conf/maps.conf;
+
+    include conf/log_format.conf;
+
+    access_log conf/log_access;
+
+    # include conf/temp_path.conf;
+    # include conf/maps.conf;
+
     include upstreams/*.conf;
     include servers/*.conf;
 
-    server_tokens off;
+    # server_tokens off;
 }
