--- a/proxy/nginx/locations/static.conf
+++ b/proxy/nginx/locations/static.conf
@@ -15,6 +15,7 @@ error_page 404 /404.html;
 error_page 500 501 502 503 504 /50x.html;
 
 location ~ [4-5][0-9][0-9].html {
+  log_not_found off;
   internal;
 }
 
