--- a/proxy/nginx/servers/seesee.space.conf
+++ b/proxy/nginx/servers/seesee.space.conf
@@ -5,20 +5,20 @@ server {
     listen [::]:80;
     server_name localhost;
     
-    root /usr/local/opentesty/nginx/html;
+    root /usr/local/openresty/nginx/html;
 
     # set $remote_root    /var/www/html;
     # set $remote_index   info.php;
 
     # rewrite /info/ /info.php;
-    rewrite /pretty/url/ /controller/action/parameter1/parameter2/;
+    # rewrite /pretty/url/ /controller/action/parameter1/parameter2/;
 
-    include ../conf/uploads.conf;
-    include ../conf/gzip.conf;
+    include conf/uploads.conf;
+    include conf/gzip.conf;
 
-    include conf/limit_methods.conf;
-    include conf/limit_rates.conf;
+    # include conf/limit_methods.conf;
+    # include conf/limit_rates.conf;
 
-    include routes/*.conf;
+    include locations/*.conf;
 
 }
