--- a/proxy/nginx/servers/seesee.space.conf
+++ b/proxy/nginx/servers/seesee.space.conf
@@ -19,6 +19,10 @@ server {
     # include conf/limit_methods.conf;
     # include conf/limit_rates.conf;
 
-    include locations/*.conf;
+    location / {
+        proxy_pass http://127.0.0.1:8080/;
+    }
+
+    # include locations/*.conf;
 
 }
