--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3.8'
 
 services:
+  nginx-ui:
+    image: schenkd/nginx-ui:latest
+    container_name: nginx-ui
+    ports:
+      - 8080:8080
+    volumes:
+      - nginx:/etc/nginx
+      
   proxy:
     restart: always
     image: danydodson/ss-proxy
