--- a/proxy/Dockerfile.dev
+++ b/proxy/Dockerfile.dev
@@ -15,4 +15,4 @@ RUN ln -sf /dev/stdout /var/log/nginx/error.log
 
 ENV PATH='/usr/local/openresty/nginx/lua:${PATH}'
 
-ENTRYPOINT ["/usr/local/openresty/bin/openresty", "-g", "daemon off;", "-c", "/etc/nginx/nginx.conf"]09
+ENTRYPOINT ["/usr/local/openresty/bin/openresty", "-g", "daemon off;", "-c", "/etc/nginx/nginx.conf"]
