--- a/proxy/nginx/nginx.conf
+++ b/proxy/nginx/nginx.conf
@@ -11,13 +11,12 @@ env JWT_SECRET;
 
 http {
   include conf/lua.conf;
-  include conf/mime_types.conf;
-  include conf/http.conf;
-  include conf/security.conf;
+  # include conf/mime_types.conf;
+  # include conf/http.conf;
+  # include conf/security.conf;
 
   include conf/log_format.conf;
-
-  access_log conf/log_access;
+  include conf/log_access.conf;
 
   # include conf/temp_path.conf;
   # include conf/maps.conf;
