--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -17,4 +17,4 @@ RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-cookie
 RUN ln -sf /dev/stdout /var/log/nginx/access.log
 RUN ln -sf /dev/stdout /var/log/nginx/error.log
 
-ENTRYPOINT ["/usr/local/openresty/bin/openresty", "-g", "daemon off;", "-c", "/etc/nginx/nginx.conf"]09
+ENTRYPOINT ["/usr/local/openresty/bin/openresty", "-g", "daemon off;", "-c", "/etc/nginx/nginx.conf"]
