--- a/proxy/Dockerfile.dev
+++ b/proxy/Dockerfile.dev
@@ -6,6 +6,7 @@ RUN apk add --no-cache git && \
 
 COPY nginx/* /etc/nginx/
 COPY lua/* /usr/local/openresty/nginx/lua/
+# COPY lua/* /usr/local/openresty/lualib/
 
 RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-jwt
 RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-cookie
@@ -13,6 +14,6 @@ RUN /usr/local/openresty/luajit/bin/luarocks install lua-resty-cookie
 RUN ln -sf /dev/stdout /var/log/nginx/access.log
 RUN ln -sf /dev/stdout /var/log/nginx/error.log
 
-ENV PATH='/usr/local/openresty/nginx/lua:${PATH}'
+# ENV PATH='/usr/local/openresty/nginx/lua:${PATH}'
 
 ENTRYPOINT ["/usr/local/openresty/bin/openresty", "-g", "daemon off;", "-c", "/etc/nginx/nginx.conf"]
