--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -10,8 +10,8 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./proxy/nginx:/etc/nginx
-      # - ./proxy/lua:/usr/local/openresty/nginx/lua
+      - ./proxy/data:/etc/nginx
+      - ./proxy/lua:/usr/local/openresty/nginx/lua
     networks:
       - back-tier
     depends_on:
