--- a/proxy/data/common/limit_method.conf
+++ b/proxy/data/common/limit_method.conf
@@ -1,4 +1,5 @@
 
+# sends 405 (method not allowed) if req does not match listed
 if ($request_method !~ ^(OPTIONS|GET|HEAD|POST|PATCH|PUT|DELETE)$ ) {
   return 405;
 }
