--- a/proxy/data/nginx.conf
+++ b/proxy/data/nginx.conf
@@ -13,14 +13,14 @@ events {
 env JWT_SECRET;
 
 http {
-  include common/lua.conf;
-  include common/mime_types.conf;
-  include common/http.conf;
+  include conf/lua.conf;
+  include conf/mime_types.conf;
+  include conf/http.conf;
 
-  include common/log_format.conf;
-  include common/log_access.conf;
+  include conf/log_format.conf;
+  include conf/log_access.conf;
 
-  include common/temp_paths.conf;
+  include conf/temp_paths.conf;
 
   include upstreams/*.conf;
   include servers/*.conf;
