--- a/proxy/data/servers/seesee.space.conf
+++ b/proxy/data/servers/seesee.space.conf
@@ -8,9 +8,9 @@ server {
 
   rewrite /pretty/url/ /controller/action/parameter1/parameter2/;
   
-  include common/uploads.conf;
-  include common/gzip.conf;
-  include common/limit_*.conf;
+  include conf/uploads.conf;
+  include conf/gzip.conf;
+  include conf/limit_*.conf;
   
   include locations/*.conf;
 }
