--- a/proxy/data/conf/limits.conf
+++ b/proxy/data/conf/limits.conf
@@ -1,17 +1,27 @@
 
+# nginx limitations and timeouts
+
+# sends 405 (method not allowed) if req does not match listed
+if ($request_method !~ ^(OPTIONS|GET|HEAD|POST|PATCH|PUT|DELETE)$ ) {
+  return 405;
+}
+
+# 
 keepalive_timeout 10;
 
+# 
 client_header_timeout 10;
 client_body_timeout 10;
 
+# 
 send_timeout 10;
 
+# 
 fastcgi_connect_timeout 10;
 fastcgi_send_timeout 10;
 fastcgi_read_timeout 10;
 
+# 
 proxy_connect_timeout 10;
 proxy_send_timeout 10;
 proxy_read_timeout 10;
-
-
