--- a/proxy/data/locations/static.conf
+++ b/proxy/data/locations/static.conf
@@ -1,8 +1,8 @@
 
-
-# location ~ (?:/\..*|~)$ {
-#   deny all;
-# }
+# 
+location ~ (?:/\..*|~)$ {
+  deny all;
+}
 
 # static files
 location ~* \.(?:manifest|appcache|html?|xml|json)$ {
