--- a/proxy/data/locations/user.conf
+++ b/proxy/data/locations/user.conf
@@ -1,10 +1,12 @@
 
-location /auth/signup {
-  # default_type application/json;
+# http://www.seesee.space/auth/signup
+
+location /user/signup {
+  default_type application/json;
   access_by_lua_file lua/sign.lua;
 }
 
-# location /auth/validate {
+# location /user/validate {
 #   default_type application/json;
 #   # Checking blacklist
 #   # Checking whitelist
@@ -16,7 +18,7 @@ location /auth/signup {
 #   }
 # }
 
-# location /auth/refresh-token {
+# location /user/refresh-token {
 #   default_type application/json;
 #   # Get refresh_token in array
 #   # View - which JWT it is associated with
@@ -29,7 +31,7 @@ location /auth/signup {
 #   }
 # }
 
-# location /auth/login {
+# location /user/login {
 #   default_type application/json;
 #   # Getting user data for authorization
 #   # Send request to / authentication
@@ -42,7 +44,7 @@ location /auth/signup {
 #   }
 # }
 
-# location /auth/logout {
+# location /user/logout {
 #   default_type application/json;
 #   # Add JWT to blacklist
 #   # Return the result
@@ -51,13 +53,11 @@ location /auth/signup {
 #   }
 # }
 
-# location ~ ^/auth/ {
-  # set_by_lua $AUTH_CENTER 'return os.getenv("AUTH_CENTER")';
-
-  # include proxy_params;
-  # rewrite /auth/(.*) /$1  break;
-  # proxy_redirect     off;
-  # proxy_pass $AUTH_CENTER;
+# location ~ ^/user/ {
+#   include proxy_params;
+#   rewrite /auth/(.*) /$1  break;
+#   proxy_redirect off;
+#   proxy_pass http://users/api/v1/user/;
 # }
 
 # location / {
