--- a/proxy/data/nginx.conf
+++ b/proxy/data/nginx.conf
@@ -14,13 +14,13 @@ env JWT_SECRET;
 
 http {
   include conf/lua.conf;
-  include conf/mime_types.conf;
+  include conf/mime.conf;
   include conf/http.conf;
 
   include conf/log_format.conf;
   include conf/log_access.conf;
 
-  include conf/temp_paths.conf;
+  include conf/temp.conf;
 
   include upstreams/*.conf;
   include servers/*.conf;
