--- a/proxy/data/servers/seesee.space.conf
+++ b/proxy/data/servers/seesee.space.conf
@@ -1,4 +1,6 @@
 
+# 
+
 server {
   listen 80;
   listen [::]:80;
@@ -7,10 +9,10 @@ server {
   root /usr/local/openresty/nginx/html;
 
   rewrite /pretty/url/ /controller/action/parameter1/parameter2/;
-  
+
   include conf/uploads.conf;
   include conf/gzip.conf;
-  include conf/limit_*.conf;
+  include conf/limits.conf;
   
   include locations/*.conf;
 }
