--- a/proxy/data/upstreams/users.conf
+++ b/proxy/data/upstreams/users.conf
@@ -1,4 +1,6 @@
 
+# upstream server (docker container) to proxy requests for
+# http://www.seesee.space/users:3100
 
 upstream users {
   server users:3100;
