--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:dev": "docker-compose -f docker-compose-dev.yml build",
     "start:dev": "docker-compose -f docker-compose-dev.yml up -d",
     "stop:dev": "docker-compose -f docker-compose-dev.yml down --remove-orphans --volumes",
+    "gixy:test": "docker run --rm -v `pwd`/nginx.conf:/etc/nginx/conf/nginx.conf yandex/gixy /etc/nginx/conf/nginx.conf",
     "reload:nginx": "docker exec -it proxy nginx -s reload",
     "clean": "yes | docker system prune --volumes && yes | docker system prune --all"
   },
