--- a/proxy/data/locations/profile.conf
+++ b/proxy/data/locations/profile.conf
@@ -1,10 +1,11 @@
 
+# http://www.seesee.space/profile
 
-# location /profile/ {
-#   access_by_lua_file /verify.lua;
-#   proxy_pass http://users-api/api/v1/auth/profile/;
-#   proxy_http_version 1.1;
-#   proxy_set_header Connection "";
-#   proxy_set_header X-Forwarded-For $remote_addr;
-#   proxy_set_header Host $http_host;
-# }
+location /profile {
+  access_by_lua_file lua/verify.lua;
+  # proxy_pass http://users-api/api/v1/auth/profile/;
+  proxy_http_version 1.1;
+  proxy_set_header Connection "";
+  proxy_set_header X-Forwarded-For $remote_addr;
+  proxy_set_header Host $http_host;
+}
