--- a/proxy/data/locations/status.conf
+++ b/proxy/data/locations/status.conf
@@ -1,6 +1,14 @@
 
+# http://www.seesee.space/nginx_status
 
-location /status {
+location /nginx_status {
   stub_status on;
   include conf/log_access.conf;
+  # access_log off;
+  allow 127.0.0.1;
+  allow 10.0.0.0/8;
+  allow 172.17.0.1;
+  allow 172.16.0.0/12;
+  allow 192.0.0.0/16;
+  deny all;
 }
