--- a/gateway/package.json
+++ b/gateway/package.json
@@ -9,23 +9,6 @@
     "format": "npx standard --fix",
     "lint": "npx standard"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jkyberneees/fast-gateway.git"
-  },
-  "keywords": [
-    "fast",
-    "http",
-    "proxy",
-    "api",
-    "gateway"
-  ],
-  "author": "Rolando Santamaria Maso <kyberneees@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jkyberneees/fast-gateway/issues"
-  },
-  "homepage": "https://github.com/jkyberneees/fast-gateway#readme",
   "dependencies": {
     "@polka/send-type": "^0.5.2",
     "fast-proxy": "^1.8.0",
@@ -33,13 +16,6 @@
     "restana": "^4.8.0",
     "stream-to-array": "^2.3.0"
   },
-  "files": [
-    "lib/",
-    "index.js",
-    "index.d.ts",
-    "README.md",
-    "LICENSE"
-  ],
   "devDependencies": {
     "@types/express": "^4.17.9",
     "aws-sdk": "^2.791.0",
@@ -59,5 +35,28 @@
     "request-ip": "^2.1.3",
     "response-time": "^2.3.2",
     "supertest": "^4.0.2"
-  }
+  },
+  "files": [
+    "lib/",
+    "index.js",
+    "index.d.ts",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jkyberneees/fast-gateway.git"
+  },
+  "keywords": [
+    "fast",
+    "http",
+    "proxy",
+    "api",
+    "gateway"
+  ],
+  "author": "Rolando Santamaria Maso <kyberneees@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jkyberneees/fast-gateway/issues"
+  },
+  "homepage": "https://github.com/jkyberneees/fast-gateway#readme"
 }
