--- a/proxy/data/locations/user.conf
+++ b/proxy/data/locations/user.conf
@@ -1,11 +1,40 @@
 
-# http://www.seesee.space/auth/signup
+# http://www.seesee.space/user/me
 
-location /user/signup {
-  default_type application/json;
-  access_by_lua_file lua/sign.lua;
+location /user/me {
+  proxy_http_version 1.1;
+  access_by_lua_file lua/verify.lua;
+  proxy_pass http://users/api/v1/users/me;
+  proxy_set_header Connection "";
+  proxy_set_header X-Forwarded-For $remote_addr;
+  proxy_set_header Host $http_host;
 }
 
+# http://www.seesee.space/user/signup
+
+location /user/signup {
+  proxy_http_version 1.1;
+  access_by_lua_file lua/sign.lua;
+  proxy_pass http://users/api/v1/users/signup;
+  proxy_set_header Connection "";
+  proxy_set_header X-Forwarded-For $remote_addr;
+  proxy_set_header Host $http_host;
+}
+
+# http://www.seesee.space/user/signin
+
+location /user/signin {
+  proxy_http_version 1.1;
+  proxy_pass http://users/api/v1/users/signin;
+  access_by_lua_file lua/sign.lua;
+  proxy_set_header Connection "";
+  proxy_set_header X-Forwarded-For $remote_addr;
+  proxy_set_header Host $http_host;
+}
+
+location /user/lua/sign {
+  access_by_lua_file lua/sign.lua;
+}
 # location /user/validate {
 #   default_type application/json;
 #   # Checking blacklist
