--- a/users/package.json
+++ b/users/package.json
@@ -8,8 +8,10 @@
     "prod": "NODE_ENV=production ./node_modules/.bin/nodemon app"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
